2004-08-21  John Paul Wallington  <jpw@gnu.org>

	* subr.el (process-kill-without-query): Made obsolete in
	version	21.4, not 21.5.

	* log-edit.el (vc-comment-ring, vc-comment-ring-index)
	(vc-previous-comment, vc-next-comment)
	(vc-comment-search-reverse, vc-comment-search-forward)
	(vc-comment-to-change-log): Likewise.

	* international/latin1-disp.el (latin1-char-displayable-p): Likewise.

2004-08-21  Peter Seibel  <peter@javamonkey.com>  (tiny patch)

	* emacs-lisp/cl-indent.el (lisp-indent-defmethod): Correct
	indentation of DEFMETHODS with non-standard method
	combinations (e.g., PROGN, MIN, MAX).

2004-08-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcvs-parse.el (cvs-parse-table, cvs-parse-commit): Try to adapt to
	the newer format of some messages in cvs-1.12.1.

2004-08-19  Masatake YAMATO  <jet@gyve.org>

	* emacs-lisp/elp.el (elp-results-symname-map): New keymap.
	(elp-results-jump-to-definition-by-mouse)
	(elp-results-jump-to-definition, elp-output-insert-symname): New Functions.
	(elp-output-result): Use elp-output-insert-symname.

2004-08-18  Kenichi Handa  <handa@m17n.org>

	* language/cyrillic.el: Register koi8-r in
	ctext-non-standard-encodings-alist.
	("Cyrillic-KOI8"): Add ctext-non-standard-encoding.

2004-08-17  Luc Teirlinck  <teirllm@auburn.edu>

	* emacs-lisp/copyright.el (copyright-update-year): Delete code
	that replaces 20xy with xy.

2004-08-17  John Paul Wallington  <jpw@gnu.org>

	* emacs-lisp/re-builder.el (reb-mode-map): Define within defvar.
	(reb-force-update): Doc fix.

2004-08-16  Richard M. Stallman  <rms@gnu.org>

	* progmodes/which-func.el (which-func-update-1): Doc fix.

	* progmodes/sh-script.el (sh-set-shell): Use sh-mode-abbrev-table.
	(sh-mode-abbrev-table): New variable.

	* progmodes/compile.el (compilation-mode): Doc fix.

	* emacs-lisp/lisp-mode.el (eval-last-sexp):
	Don't cons a new symbol each time.
	(eval-last-sexp-fake-value): New variable.
