@@ -1,3 +1,11 @@
+2004-08-21  David Kastrup  <dak@gnu.org>
+
+	* net/ange-ftp.el (ange-ftp-hash-entry-exists-p)
+	(ange-ftp-file-entry-p, ange-ftp-file-symlink-p): Since the code
+	has been converted to use hashtables, the relation `nil=none' is
+	no longer valid, as `nil' is not a hashtable.  This patch tries to
+	reduce the number of resulting errors.
+
 2004-08-21  John Paul Wallington  <jpw@gnu.org>
 
 	* subr.el (process-kill-without-query): Made obsolete in
